tests/errors/self_block_nested.dang
# Test: a self { } block cannot be nested inside another self { } block.
type Outer {
  self {
    self {
      foo: Int! { 1 }
    }
  }
}
